[gd_scene load_steps=6 format=3 uid="uid://bqm40gtror1nb"]

[ext_resource type="Script" path="res://Weapons/Arrow/Arrow.gd" id="1_3pp6f"]
[ext_resource type="Texture2D" uid="uid://bi2d6jkvh4nlm" path="res://Weapons/arrow.png" id="1_xjyug"]
[ext_resource type="Texture2D" uid="uid://bkiveor4oalox" path="res://Weapons/arrow_epic.png" id="3_qxewt"]

[sub_resource type="Curve" id="Curve_ytdgc"]
_data = [Vector2(0.0963303, 0), 0.0, 0.0, 0, 0, Vector2(0.151376, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_w86iq"]
radius = 15.0

[node name="Arrow" type="Area2D"]
script = ExtResource("1_3pp6f")

[node name="Particles" type="CPUParticles2D" parent="."]
amount = 10
emission_shape = 1
emission_sphere_radius = 7.0
gravity = Vector2(0, 0)
scale_amount_min = 5.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_ytdgc")
color = Color(1, 0, 0, 1)

[node name="Particles2" type="CPUParticles2D" parent="."]
visible = false
amount = 10
emission_shape = 1
emission_sphere_radius = 7.0
gravity = Vector2(0, 0)
scale_amount_min = 6.0
scale_amount_max = 6.0
scale_amount_curve = SubResource("Curve_ytdgc")
color = Color(1, 0.843137, 0, 1)

[node name="Sprite" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(3.6, 3.6)
texture = ExtResource("1_xjyug")

[node name="Sprite2" type="Sprite2D" parent="."]
visible = false
rotation = 1.5708
scale = Vector2(4, 4)
texture = ExtResource("3_qxewt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_w86iq")

[node name="ExpirationTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ExpirationTimer" to="." method="_on_expiration_timer_timeout"]
